--- a/App.css
+++ b/App.css
@@ -4,12 +4,13 @@
         max-width: 792px;
         height: fit-content;
         overflow: auto;
+        padding: 30px;
     }
 }
 
 @media only screen and (max-width: 500px) {
     body {
-        width: 300px;
+        width: 240px;
         padding: 30px;
         height: fit-content;
         overflow: auto;
